Changed from update to drop-create in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=4.FCTProyect-JPA
 
 server.port = 8081
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/nauticclub
 spring.datasource.username=root
 spring.datasource.password=1234
